# rag-chatter

./: .env.example  .gitignore  ARCHITECTURE.md  CI_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_PIPELINE.md  DEPLOYMENT_REPORT.md  Dockerfile.backend  ENVIRONMENT_VARIABLES.md  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_PRODUCTION_REPORT.md  FINAL_READINESS_REPORT.md  FINAL_SUBMISSION_CHECKLIST.md  LOOM_DEMO_CHECKLIST.md  RAG_PIPELINE_REPORT.md  README.md  ROLLBACK.md  ROOT_CAUSE_REPORT.md  SMOKE_TEST_REPORT.md  SUBMISSION_AUDIT.md  SUBMISSION_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml  frontend_index.html  health_response.txt  prod_chat_raw.txt  prod_metadata.json  prod_rebuild_check.json  prod_rebuild_result.json  prod_sources_check.json  prod_sources_result.json  railway.json  smoke_chat_questions.json  smoke_sources_with_memory.json  smoke_test_mock_connectivity.json  smoke_test_results.json  vercel.json  vercel_deploy.html
backend/: .env.example  Dockerfile  Dockerfile.bak  README.md  alembic.ini  celery_app.py  metrics.py  pyproject.toml  railway.json  tasks.py
backend/alembic/: env.py  script.py.mako
backend/api/: admin.py  main.py  schemas.py
backend/graph/: workflow.py
backend/ingest/: analysis.py  chunking.py  embeddings.py  metadata.py  pipeline.py  transcript.py  validator.py
backend/models/: analysis.py  chat_history.py  chunk.py  embedding_cache.py  transcript.py  video.py
backend/rag/: context.py  prompts.py  retrieval.py
backend/tests/: conftest.py  test_analysis.py  test_api.py  (+3 more)
(+105 files in other folders)
