[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-video-intelligence-rag-platform-backend"
version = "0.1.0"
description = "Backend for Creator Video Intelligence RAG Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.4.0",
  "chromadb>=0.5.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "qdrant-client>=1.7.0",
  "langgraph>=0.2.0",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2024.8.6",
  "imageio-ffmpeg>=0.5.1",
  "openai>=1.40.0",
  "tenacity>=8.5.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "orjson>=3.10.7",
  "alembic>=1.11.0",
  "psycopg[binary]>=3.2",
  "celery[redis]>=5.3.0",
  "redis>=4.6.0",
  "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP", "S", "SIM"]
ignore = ["S101", "B007", "B008", "S110", "SIM108", "I001"]
